[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/car/car.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]
friction = 4.0
rough = true
absorbent = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 118.871, 14.8708 )

[sub_resource type="PhysicsMaterial" id=3]
rough = true

[sub_resource type="CircleShape2D" id=4]
radius = 30.0202

[node name="car" type="RigidBody2D"]
mass = 300.0
physics_material_override = SubResource( 1 )
gravity_scale = 5.0
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="r_wheel" type="RigidBody2D" parent="."]
position = Vector2( 81.2939, 64 )
mass = 5.10204
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="r_wheel"]
shape = SubResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="r_wheel"]
node_a = NodePath("../..")
node_b = NodePath("..")
softness = 0.03

[node name="l_wheel" type="RigidBody2D" parent="."]
position = Vector2( -79.254, 64 )
mass = 5.10204
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="l_wheel"]
shape = SubResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="l_wheel"]
node_a = NodePath("../..")
node_b = NodePath("..")
softness = 0.03

[node name="ray_ceil" type="RayCast2D" parent="."]
position = Vector2( -100, -20 )
enabled = true
cast_to = Vector2( 200, 0 )

[node name="ray_floor" type="RayCast2D" parent="."]
position = Vector2( -100, 95 )
enabled = true
cast_to = Vector2( 200, 0 )
